Updating .ipynb file

--- a/code/introduction_python.ipynb
+++ b/code/introduction_python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOTPmhTup6mjL8Mm2rjTU4V",
+      "authorship_tag": "ABX9TyOUcW3oraimd0NFG1EgMvPF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "L2d-NG0H7gwy"
       },
@@ -105,15 +105,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d9VEGgkrsqyu",
-        "outputId": "ea368e85-4ce1-4ddf-a9cc-db1a71506373"
+        "outputId": "cbe000dd-5c0e-4606-b3af-f4770f31268d"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /drive\n"
+            "Drive already mounted at /drive; to attempt to forcibly remount, call drive.mount(\"/drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -131,12 +131,25 @@
         "\n",
         " If you're using Jupyter _locally_, you will want to (i) clone/download our companion GitHub repository, [`intro.python.24`](https://github.com/sakeefkarim/intro.python.24); (ii) _change your working directory_ (via the command line) so that it points to the `intro.python.24` folder you just cloned/downloaded.\n",
         "\n",
+        " To implement (ii), feel free to un-annotate the code snippet below and run the cell — but **remember to adjust the code as needed** (depending on where `intro.python.24` is located on your computer).\n",
+        "\n",
         "\n",
         "\n"
       ],
       "metadata": {
         "id": "V7pEg6mLtUIE"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# cd \"THE PATH TO ... /intro.python.24\""
+      ],
+      "metadata": {
+        "id": "rEwpWFQVK26j"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -158,19 +171,151 @@
         "\n",
         "# If you have the intro.python.24 folder on your machine:\n",
         "\n",
-        "# gapminder_excel = pd.read_excel(\"./data/gapminder.xlsx\")\n",
+        "# gapminder_excel = pd.read_excel(\"data/gapminder.xlsx\")\n",
         "\n",
-        "# gapminder_csv = pd.read_csv(\"./data/gapminder.csv\")\n"
+        "# gapminder_csv = pd.read_csv(\"data/gapminder.csv\")\n"
+      ],
+      "metadata": {
+        "id": "GRMVTR50_JGk"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Stata Files"
+      ],
+      "metadata": {
+        "id": "ZvHO4DCeLFWN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# From the companion GitHub repository:\n",
+        "\n",
+        "gapminder_dta = pd.read_stata(\"https://github.com/sakeefkarim/intro.python.24/raw/main/data/gapminder.dta\")\n",
+        "\n",
+        "# If you have the intro.python.24 folder on your machine:\n",
+        "\n",
+        "# gapminder_dta = pd.read_excel(\"data/gapminder.dta\")\n"
+      ],
+      "metadata": {
+        "id": "lRzbixbkLLbg"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### SPSS Files"
+      ],
+      "metadata": {
+        "id": "4DcdCrA6LYD2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# If you want to read in SPSS files, you may want to launch this notebook locally.\n",
+        "\n",
+        "# Then, make sure you have pyreadstat installed within your conda environment — say, by running\n",
+        "\n",
+        "# conda install pyreadstat\n",
+        "\n",
+        "# In your terminal. You can then run the code below:\n",
+        "\n",
+        "# gapminder_spss = pd.read_spss(\"data/gapminder.sav\")\n"
+      ],
+      "metadata": {
+        "id": "tLm2Xrl8Lerh"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### R Files"
+      ],
+      "metadata": {
+        "id": "rdsWXCECPwZv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# In Google Colab:\n",
+        "\n",
+        "!pip install pyreadr\n",
+        "\n",
+        "# Locally, install pyreadr within your conda environment — e.g.,:\n",
+        "\n",
+        "# conda install pyreadr"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nNkNPqB5MM0s",
+        "outputId": "b0667b44-dae7-4d68-eba6-34f32aa8455f"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: pyreadr in /usr/local/lib/python3.10/dist-packages (0.5.0)\n",
+            "Requirement already satisfied: pandas>=1.2.0 in /usr/local/lib/python3.10/dist-packages (from pyreadr) (1.5.3)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.1 in /usr/local/lib/python3.10/dist-packages (from pandas>=1.2.0->pyreadr) (2.8.2)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas>=1.2.0->pyreadr) (2023.3.post1)\n",
+            "Requirement already satisfied: numpy>=1.21.0 in /usr/local/lib/python3.10/dist-packages (from pandas>=1.2.0->pyreadr) (1.23.5)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.1->pandas>=1.2.0->pyreadr) (1.16.0)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Here, the alias is idiosyncratic (no canonical conventions for pyreadr)\n",
+        "\n",
+        "import pyreadr as pyr\n",
+        "\n",
+        "# Loading R files from GitHub\n",
+        "\n",
+        "rds_url = \"https://github.com/sakeefkarim/intro.python.24/raw/main/data/gapminder.rds\"\n",
+        "\n",
+        "destination = '/drive/My Drive/Colab/gapminder.rds'\n",
+        "\n",
+        "pyr.download_file(rds_url, destination)\n",
+        "\n",
+        "gapminder_r = pyr.read_r(destination)\n",
+        "\n",
+        "# Checking to see which objects are available:\n",
+        "\n",
+        "print(gapminder_r.keys())\n",
+        "\n",
+        "# Only none, ergo:\n",
+        "\n",
+        "gapminder_rds = gapminder_r[None]\n",
+        "\n",
+        "# Importing R files locally:\n",
+        "\n",
+        "# gapminder_rds = pyr.read_r(data/gapminder.rds)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
         },
-        "id": "GRMVTR50_JGk",
-        "outputId": "59e89fee-1e09-497c-a294-f7c53181087a"
+        "id": "0caogqHbQz0q",
+        "outputId": "2af795ef-5835-4751-bd19-892e6eb4889e"
       },
-      "execution_count": 14,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -193,7 +338,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ade2930f-7751-4084-b96f-9ce167567737\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-9d44ceff-edbb-490d-bd3e-c292d7e18831\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -327,7 +472,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ade2930f-7751-4084-b96f-9ce167567737')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9d44ceff-edbb-490d-bd3e-c292d7e18831')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -379,12 +524,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-ade2930f-7751-4084-b96f-9ce167567737 button.colab-df-convert');\n",
+              "        document.querySelector('#df-9d44ceff-edbb-490d-bd3e-c292d7e18831 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-ade2930f-7751-4084-b96f-9ce167567737');\n",
+              "        const element = document.querySelector('#df-9d44ceff-edbb-490d-bd3e-c292d7e18831');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -404,8 +549,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-790d511b-80b0-4742-9bf2-43a82b50fbe0\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-790d511b-80b0-4742-9bf2-43a82b50fbe0')\"\n",
+              "<div id=\"df-659e39dc-bffa-4bf5-9155-974e608d58e7\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-659e39dc-bffa-4bf5-9155-974e608d58e7')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -524,7 +669,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-790d511b-80b0-4742-9bf2-43a82b50fbe0 button');\n",
+              "        document.querySelector('#df-659e39dc-bffa-4bf5-9155-974e608d58e7 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -535,7 +680,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 13
         }
       ]
     }
