--- a/code/introduction_python.ipynb
+++ b/code/introduction_python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMRok1Jng0wAylPazWucf5R",
+      "authorship_tag": "ABX9TyOk2GRyVuJe7cEhv78i7YUJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -292,7 +292,7 @@
         "\n",
         "# Importing R files locally:\n",
         "\n",
-        "# gapminder_r = pyr.read_r(data/gapminder.rds)\n",
+        "# gapminder_r = pyr.read_r(\"data/gapminder.rds\")\n",
         "\n",
         "# gapminder_rds = gapminder_r[None]"
       ],
@@ -378,7 +378,7 @@
         "\n",
         "# Let's look at all the \"dtypes\":\n",
         "\n",
-        "gapminder.dtypes"
+        "print(gapminder.dtypes)"
       ],
       "metadata": {
         "id": "nV1cBtGBYpVl"
@@ -389,7 +389,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Exploratory Visualizations"
+        "### Exploratory Visualizations\n",
+        "\n",
+        "Here's a very useful way to explore your data via `seaborn`. We'll be returning to `seaborn` at some point this semester."
       ],
       "metadata": {
         "id": "0f9Wg7LTfQYU"
@@ -474,7 +476,7 @@
         "\n",
         "gapminder_50 = gapminder.select_dtypes(exclude=['object']).head(50)\n",
         "\n",
-        "gapminder_50.mean()\n",
+        "gapminder_50.mean(numeric_only = True)\n",
         "\n",
         "# Are these statistics informative at all? Hint: they're not! But why?\n",
         "\n",
@@ -494,11 +496,11 @@
         "\n",
         "gapminder_continent = gapminder.groupby(['continent'])\n",
         "\n",
-        "gapminder_continent.mean()\n",
+        "gapminder_continent.mean(numeric_only = True)\n",
         "\n",
         "# Grouped averages for life expectancy:\n",
         "\n",
-        "gapminder_continent[['lifeExp']].mean()\n",
+        "gapminder_continent[['lifeExp']].mean(numeric_only=True)\n",
         "\n",
         "# Grouped averages for life expectancy (descending):\n",
         "\n",
@@ -536,7 +538,7 @@
         "\n",
         "# What *kind* of variables are we dealing with?\n",
         "\n",
-        "gapminder.dtypes"
+        "gapminder[['continent', 'country', 'lifeExp']].dtypes"
       ],
       "metadata": {
         "id": "zMBXZ3uqnPnK"
@@ -547,7 +549,7 @@
     {
       "cell_type": "code",
       "source": [
-        "gapminder_select = gapminder[ gapminder['lifeExp'] > 80 ]\n",
+        "gapminder_select = gapminder[ gapminder['lifeExp'] >= 80 ]\n",
         "\n",
         "# Dimensions (original data frame)\n",
         "\n",
@@ -566,7 +568,7 @@
     {
       "cell_type": "code",
       "source": [
-        "gapminder_asia = gapminder[ gapminder['continent'] == 'Asia']\n",
+        "gapminder_asia = gapminder[ gapminder['continent'] == 'Africa']\n",
         "\n",
         "gapminder_asia.head()\n",
         "\n",
@@ -581,7 +583,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Subsetting rows based on index *label*:\n",
+        "# Subsetting rows based on *index label*:\n",
         "\n",
         "gapminder.loc[0:10]\n",
         "\n",
@@ -707,7 +709,7 @@
       "source": [
         "# Fitting Crude Models\n",
         "\n",
-        "These models are for illustrative purposes—to wit, please don't read into the results!"
+        "These models are, of course, for illustrative purposes—to wit, don't read into the results!"
       ],
       "metadata": {
         "id": "f6PIpnkBBBNm"
@@ -734,7 +736,7 @@
         "\n",
         "print(mod_gapminder_1.summary().tables[1])\n",
         "\n",
-        "# Save results as a CSV file\n",
+        "# Save results as an Excel file\n",
         "\n",
         "mod1_results = mod_gapminder_1.summary().tables[1]\n",
         "\n",
@@ -785,6 +787,70 @@
       ],
       "metadata": {
         "id": "weRYgmupSjib"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Work With the `penguins` Data Frame\n",
+        "\n",
+        "\n",
+        "Now, it's your turn to wrangle (or \"pre-process\") data in `Python`. To do so, you'll be working with *another* dataset you encountered during the [<font face=\"Inconsolata\" size=4.5> PopAgingDataViz</font>](https://popagingdataviz.com/) workshop — i.e., the `penguins` data frame from the wonderful [`{palmerpenguins}`](https://allisonhorst.github.io/palmerpenguins/) package.\n",
+        "\n",
+        "You can find different versions of `penguins` via [`intro.python.24/data`](https://github.com/sakeefkarim/intro.python.24/tree/main/data). For those of you who are new to `Python`, feel free to download some helpful cheat sheets from [`intro.python.24/code/cheat sheets`](https://github.com/sakeefkarim/intro.python.24/tree/main/code/cheat%20sheets).\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "MXQTfOXICStX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Tasks\n",
+        "\n",
+        "1. Load `penguins` into your `Jupyter Notebook`.\n",
+        "\n",
+        "2. What are the *dimensions* of the `penguins` data frame (e.g., rows and columns)?\n",
+        "\n",
+        "3. List all the columns in `penguins` and what *kinds* of variables they are.\n",
+        "\n",
+        "4. Show the first 10 rows in the dataset.\n",
+        "\n",
+        "5. Show the last 20 rows in the dataset.\n",
+        "\n",
+        "6. Visualize the relationships between all numeric variables in `penguins` — but make sure these visual summaries vary by the `species` variable.\n",
+        "\n",
+        "7. Generate basic descriptive statistics for all numeric variables.\n",
+        "\n",
+        "8. Generate basic descriptive statistics for all discrete variables.\n",
+        "\n",
+        "9. Isolate the first 35 observations in `penguins` and display the mean values associated with *all numeric variables* (for these 35 observations).\n",
+        "\n",
+        "10. Show the mean value for `bill_length_mm` at different levels of `species` (more concretely, produce grouped averages for different penguins species). Sort the rows by descending (mean) values of `bill_length_mm`.\n",
+        "\n",
+        "11. Create a new data frame that:\n",
+        "\n",
+        "  + Only includes data from the latest `year` in `penguins`.\n",
+        "  + Resets the index value for each observation.\n",
+        "  + Removes the `year` variable.\n",
+        "\n",
+        "12. Show the rows corresponding to index values of `0` and `21` in your new data frame.\n",
+        "\n",
+        "13. Show the 10th and 20th observation in your new data frame.\n",
+        "\n",
+        "14. Rename at least two of the variables in your new data frame; store the results.\n",
+        "\n",
+        "15. Using your custom data frame, generate new numeric and discrete variables; once again, store the results.\n",
+        "\n",
+        "16. Estimate at least two regression models using your custom data frame.\n",
+        "\n",
+        "17. Export model results as `.xlsx` files.\n",
+        "\n",
+        "18. Try to reproduce your results (for questions 1-17) using [`reticulate`](https://rstudio.github.io/reticulate/) in `R`."
+      ],
+      "metadata": {
+        "id": "PyGNym0vaxee"
       }
     }
   ]
