Cleaner version of notebook (removing outputs etc.)

--- a/code/introduction_python.ipynb
+++ b/code/introduction_python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOk2GRyVuJe7cEhv78i7YUJ",
+      "authorship_tag": "ABX9TyO9UMEEZx63fxMfG9LB4rpr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -173,6 +173,8 @@
         "\n",
         "gapminder_csv = pd.read_csv(\"https://github.com/sakeefkarim/intro.python.24/raw/main/data/gapminder.csv\")\n",
         "\n",
+        "gapminder_excel\n",
+        "\n",
         "# If you have the intro.python.24 folder on your machine:\n",
         "\n",
         "# gapminder_excel = pd.read_excel(\"data/gapminder.xlsx\")\n",
@@ -331,7 +333,7 @@
         "\n",
         "gapminder.head()\n",
         "\n",
-        "#?gapminder.head"
+        "?gapminder.head"
       ],
       "metadata": {
         "id": "bzX5uMfLWvTk"
@@ -374,11 +376,11 @@
         "\n",
         "# What *type* of variable is \"continent\"?\n",
         "\n",
-        "gapminder['continent'].dtype\n",
+        "print(gapminder['continent'].dtype)\n",
         "\n",
         "# Let's look at all the \"dtypes\":\n",
         "\n",
-        "print(gapminder.dtypes)"
+        "gapminder.dtypes"
       ],
       "metadata": {
         "id": "nV1cBtGBYpVl"
@@ -568,11 +570,11 @@
     {
       "cell_type": "code",
       "source": [
-        "gapminder_asia = gapminder[ gapminder['continent'] == 'Africa']\n",
+        "gapminder_africa = gapminder[ gapminder['continent'] == 'Africa']\n",
         "\n",
-        "gapminder_asia.head()\n",
+        "gapminder_africa.head()\n",
         "\n",
-        "gapminder_asia.reset_index(drop=False).head()"
+        "gapminder_africa.reset_index(drop=True).head()"
       ],
       "metadata": {
         "id": "VhzdUBN7uqt-"
@@ -610,11 +612,11 @@
         "\n",
         "# Produce data frame based on row/column labels:\n",
         "\n",
-        "gapminder.loc[0:, ['country']]\n",
+        "gapminder.loc[[0], ['country']]\n",
         "\n",
         "# Produce data frame based on row/column positions:\n",
         "\n",
-        "gapminder.iloc[0:, [0]]"
+        "gapminder.iloc[[0], [0]]"
       ],
       "metadata": {
         "id": "X7C4QrY_ybNh"
@@ -726,7 +728,7 @@
         "\n",
         "# LaTeX Code\n",
         "\n",
-        "mod_gapminder_1.summary().as_latex()\n",
+        "print(mod_gapminder_1.summary().as_latex())\n",
         "\n",
         "# CSV\n",
         "\n",
