Adding solutions (for exercises)

--- a/code/introduction_python.ipynb
+++ b/code/introduction_python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO9UMEEZx63fxMfG9LB4rpr",
+      "authorship_tag": "ABX9TyN+mO5jtqJa9Pjb3UHiS2Bn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -821,7 +821,7 @@
         "\n",
         "5. Show the last 20 rows in the dataset.\n",
         "\n",
-        "6. Visualize the relationships between all numeric variables in `penguins` — but make sure these visual summaries vary by the `species` variable.\n",
+        "6. Visualize the bivariate relationships between all numeric variables in `penguins` — but make sure these visual summaries vary by the `species` variable.\n",
         "\n",
         "7. Generate basic descriptive statistics for all numeric variables.\n",
         "\n",
@@ -854,6 +854,226 @@
       "metadata": {
         "id": "PyGNym0vaxee"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Solutions"
+      ],
+      "metadata": {
+        "id": "_fmlwRtQjCjd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Exercises 1-5"
+      ],
+      "metadata": {
+        "id": "TanLMKZwjqsM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Importing data from palmerpenguins:\n",
+        "\n",
+        "# Just one possible route (there are also .xlsx, .csv, .rds, .spss versions available)\n",
+        "\n",
+        "penguins = pd.read_stata(\"https://github.com/sakeefkarim/intro.python.24/raw/main/data/penguins.dta\")\n",
+        "\n",
+        "# Dimensions of new data frame:\n",
+        "\n",
+        "print(penguins.shape)\n",
+        "\n",
+        "# List all columns, show dtypes:\n",
+        "\n",
+        "print(penguins.dtypes)\n",
+        "\n",
+        "# First 10 observations:\n",
+        "\n",
+        "penguins.head(10)\n",
+        "\n",
+        "# Final 20 observations\n",
+        "\n",
+        "penguins.tail(20)"
+      ],
+      "metadata": {
+        "id": "hMBdTI4ZjWSh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Exercise 6"
+      ],
+      "metadata": {
+        "id": "FGoElxaPjlk8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sns.set_theme()\n",
+        "\n",
+        "sns.pairplot(penguins, hue = \"species\")"
+      ],
+      "metadata": {
+        "id": "zy6wLKBEjxrW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Exercises 7-10"
+      ],
+      "metadata": {
+        "id": "fW4My-JOjzHR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Descriptive statistics for all numeric variables\n",
+        "\n",
+        "penguins.describe(include=[np.number])\n",
+        "\n",
+        "# Descriptive statistics for all discrete or *non*-numeric variables:\n",
+        "\n",
+        "penguins.describe(exclude=[np.number])\n",
+        "\n",
+        "# Mean of all numeric variables for first 35 observations:\n",
+        "\n",
+        "penguins.head(35).mean(numeric_only = True)\n",
+        "\n",
+        "# Average bill length by species:\n",
+        "\n",
+        "penguins_species = penguins.groupby(['species'])\n",
+        "\n",
+        "penguins_species[['bill_length_mm']].mean().sort_values(by = 'bill_length_mm', ascending=False)"
+      ],
+      "metadata": {
+        "id": "oXdLbKYWj8kO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Exercises 11-13"
+      ],
+      "metadata": {
+        "id": "wYGz5QOYkEcH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# New data frame — latest year, dropping year variable, resetting index\n",
+        "\n",
+        "latest_year = penguins['year'].max()\n",
+        "\n",
+        "penguins_new = penguins[penguins['year'] == latest_year].reset_index(drop=True).drop(columns='year')\n",
+        "\n",
+        "# Show the rows corresponding to index values of 0 and 21 in the new data frame.\n",
+        "\n",
+        "penguins_new.loc[[0, 21],]\n",
+        "\n",
+        "# Show the 10th and 20th observation in the new data frame.\n",
+        "\n",
+        "penguins_new.loc[[9,19],]"
+      ],
+      "metadata": {
+        "id": "LWBScXfukRTS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Exercises 14-15\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "09CZCMXEkYCB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Rename two variables in the new data frame, store results:\n",
+        "\n",
+        "# NOTE: this is simply an example — not the only possible answer\n",
+        "\n",
+        "penguins_new.rename(columns={'bill_length_mm':'bill_length',\n",
+        "                             'body_mass_g':'body_mass'},\n",
+        "                              inplace = True)\n",
+        "\n",
+        "# Creating new numeric variable, discrete variables\n",
+        "\n",
+        "# NOTE: these are simply EXAMPLES — not the only possible solutions\n",
+        "\n",
+        "# Body Mass in kg\n",
+        "\n",
+        "penguins_new['body_mass_kg'] = penguins_new['body_mass'] / 1000\n",
+        "\n",
+        "# A new composite variable that combines \"sex\" and \"species\"\n",
+        "\n",
+        "penguins_new['sex_species'] = penguins_new[\"sex\"].str.capitalize().str.cat(penguins_new['species'], sep = \" \")\n",
+        "\n",
+        "# Binary indicator of whether a penguin was observed on Biscoe\n",
+        "\n",
+        "penguins_new['biscoe'] = np.where(penguins_new['island'] == 'Biscoe', 1, 0)\n"
+      ],
+      "metadata": {
+        "id": "Ji_J5hsgky6X"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Exercises 16-17\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "gNl7z72Rk0YX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Fitting two crude regression models using custom data frame, exporting results to Google Drive —\n",
+        "# adjust code within to_excel() if you want to save your results locally.\n",
+        "\n",
+        "# OLS\n",
+        "\n",
+        "mod_body_mass = ols(\"body_mass_kg ~ bill_depth_mm + flipper_length_mm + sex + species\", data = penguins_new).fit()\n",
+        "\n",
+        "results_body_mass = mod_body_mass.summary().tables[1]\n",
+        "\n",
+        "pd.DataFrame(results_body_mass).to_excel('/drive/My Drive/Colab/penguins_results1.xlsx')\n",
+        "\n",
+        "# Logit\n",
+        "\n",
+        "mod_biscoe = logit(\"biscoe ~ bill_depth_mm + flipper_length_mm + body_mass_kg\", data = penguins_new).fit()\n",
+        "\n",
+        "results_biscoe = mod_biscoe.summary().tables[1]\n",
+        "\n",
+        "pd.DataFrame(results_biscoe).to_excel('/drive/My Drive/Colab/penguins_results2.xlsx')"
+      ],
+      "metadata": {
+        "id": "xADP2gA8lAta"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
